...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        >

        <TextView
            android:id="@+id/recycler_comment_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="\@sampleUsernameSuperLong"
            android:textStyle="bold"
            android:textSize="15sp"
...
            android:layout_alignParentStart="true"
            android:layout_marginTop="2dp"
            android:textColor="@color/worm_skin"
            />

        <TextView
            android:id="@+id/recycler_comment_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Commented stuff"
            android:textSize="14sp"
            android:layout_marginTop="2dp"
            android:layout_alignParentStart="true"
...
