...
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:importantForAccessibility="no"
            android:src="@mipmap/ic_launcher_foreground" />

        <ImageButton
            android:id="@+id/home_proceed_to_search"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
           android:layout_alignEnd="@+id/home_userProfile_button"
            android:layout_marginTop="20dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/icon_search"
            android:backgroundTint="@color/inactive_grey"
            android:hapticFeedbackEnabled="true"
            android:onClick="onSearchPressed" />
...
