...
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context="honda.bookworm.View.Search_ViewHandler">

    <SearchView
        android:id="@+id/search_search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_pill"
        android:iconifiedByDefault="false"
        android:paddingHorizontal="2dp"
...
                android:layout_height="35dp"
                android:checkedButton="@id/search_for_genre"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/search_for_users"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginHorizontal="2dp"
                    android:background="@drawable/selector_selected_pill"
                    android:button="@android:color/transparent"
                    android:elevation="2dp"
...
